Vizman beta-1.3, modul zakazek
  - zprovoznit Aviza
  - opravit refreshe
  - Zrušit přejmenovávání  projektových a dokumentových adresářů
  - Odstranit tlačítko "Otevřít projektový adresář" z formulářů
  - Opravit otvírání adresářů z formulářů v sí´tovém prostředí
  - Zamezit zadání jiné měny než je na výběr, zakázat prásdné pole
  - Zobrazovat ve všech avízách fakturace správná čísla
  - Sjednotit a upravid vizuální design avíz
  - Přidat barevná zvýraznění  (odlišit typy zakázek, záporná čísla, data po termínu)
  - Přestěhovat SUB pod ZAK
  - preskladat pole ve formularich
  - form compress/expand buttons
  - přidat Rok do KONT a do formulářů
  - zmenit razeni FAKT a ZAK na descendant
  - přidat agendu klientů
  - regex pro cislo zakazky
  - opravit fkturaci
  - remove EVIDENCE buttons
  - add AKV->ZAK button